Drop GlobalPack's target inventory and fix unlinking.